<?xml version="1.0" encoding="utf-8"?>
<resources  xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">测试demo 和常用代码集合</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_doov_button">点击:打印log,验证dispatchTouchEvent onInterceptTouchEvent  onTouchEvent onTouch onClick 执行顺序</string>
    <string name="notification_group">通知-group</string>
    <string name="notifications">通知测试-用于修改SystemUI</string>

    <string name="binder_download_test_title">Binder Activity-Service 非跨进程通信测试</string>
    <string name="client_send_msg">客户端发送请求</string>
    <string name="tv_msg_response">服务器将返回信息</string>
    <string name="messenger">IPC-messenger</string>
    <string name="animation_test">属性动画</string>
    <string name="palette_test">获取图片颜色</string>
    <string name="main_clolor">主要颜色</string>
    <string name="shake_button_text">文字振动</string>
    <string name="shake_text">文字振动起来了</string>
    <string name="touch_button_text">touch事件</string>
    <string name="handler_button_text">Handler Thread Name</string>
    
    <string name="handler_preference_text">自定义Preference</string>
    <string name="memoryusage_item_total_space">"总存储量 <xliff:g id="total_space">%1$s</xliff:g> GB"</string>
    <string name="memoryusage_item_other_space">"系统使用 <xliff:g id="other_space">%1$s</xliff:g> GB"</string>
    <string name="memoryusage_item_available_space">"可用容量 <xliff:g id="available_space">%1$s</xliff:g> GB"</string>
    <string name="memoryusage_item_used_space">"已用容量 <xliff:g id="used_space">%1$s</xliff:g> GB"</string>
    
    <string name="horizontalscrollview_gridview">horizontalscrollview 嵌套 gridview水平滑动</string>
    <string name="progress_bar">自定义Progress Bar</string>
    <string name="matrix">Matrix</string>
    <string name="floatball_title">悬浮桌面的加速球-模拟内存清理效果</string>

    <string name="price">谢谢惠顾!</string>
    <string name="message_title">刮奖区</string>
    <string name="guaguaka">刮刮卡</string>


    <string name="tv_award">点击开始抽奖</string>
    <string name="lucky_panel_title">抽奖转盘</string>

    <string name="weather_info">天气预报</string>
    <string name="tv_hum_prefix">湿度:</string>
</resources>
