<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    
    	<LinearLayout 
    	    android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical" >

			<Button
				android:id="@+id/baidu_weather"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:text="@string/weather_info" />

			<Button
				android:id="@+id/floatball"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:text="@string/floatball_title" />
			<Button
				android:id="@+id/guaguaka"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:text="@string/guaguaka" />
			<Button
				android:id="@+id/wuzhiqi"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:text="五子棋" />

			<Button
				android:id="@+id/lucky_panel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:text="@string/lucky_panel_title" />

		     <Button
		      android:id="@+id/notifications"
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:text="抽屉效果"
		      android:layout_marginBottom="10dp"/>
	
		    <Button
		        android:id="@+id/notification_group"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/notification_group" />
		
		    <Button
		        android:id="@+id/ipc_aidl"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="IPC-AIDL" />

			<Button
		        android:id="@+id/messenger"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/messenger" />

			<Button
				android:id="@+id/ipc_binder"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="10dp"
				android:text="@string/binder_download_test_title" />

			<Button
		        android:id="@+id/animation"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/animation_test" />

		    <Button
		        android:id="@+id/palette"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/palette_test" />
		    
		    <Button
		        android:id="@+id/shake"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/shake_button_text" />
		    <Button
		        android:id="@+id/touch"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/touch_button_text" />
		    <Button
		        android:id="@+id/handler"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/handler_button_text" />
		    
		    <Button
		        android:id="@+id/preference"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/handler_preference_text" />
		    
		    <Button
		        android:id="@+id/horizontalscrollview_gridview"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/horizontalscrollview_gridview" />
		    
		    <Button
		        android:id="@+id/progress_bar"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/progress_bar" />
		    <Button
		        android:id="@+id/matrix"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:text="@string/matrix" />
    	</LinearLayout>
   
    </ScrollView>
</RelativeLayout>